--- a/LabManager-Server/src/br/erickweil/labmanager/server/swing/JanelaNovoPrograma.form
+++ b/LabManager-Server/src/br/erickweil/labmanager/server/swing/JanelaNovoPrograma.form
@@ -346,7 +346,6 @@
                         </Column>
                       </TableColumnModel>
                     </Property>
-                    <Property name="showHorizontalLines" type="boolean" value="false"/>
                     <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                       <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                     </Property>
@@ -448,11 +447,12 @@
                 <Component class="javax.swing.JComboBox" name="combo_cond_match">
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="4">
+                      <StringArray count="5">
                         <StringItem index="0" value="exatamente"/>
                         <StringItem index="1" value="comeca"/>
                         <StringItem index="2" value="termina"/>
-                        <StringItem index="3" value="regex"/>
+                        <StringItem index="3" value="contem"/>
+                        <StringItem index="4" value="regex"/>
                       </StringArray>
                     </Property>
                   </Properties>
